# sentinel-wallpaper

./: .gitignore  Cargo.toml  README.md  addon.json  build.rs  config.yaml
assets/: sentinel.js
assets/sentinel.default/: editable.yaml  index.html  manifest.json  meta.json  script.js  style.css
options/: options.css  options.js
src/: bootstrap.rs  ipc_connector.rs  logging.rs  main.rs  paths.rs  utility.rs  wallpaper_engine.rs
src/data_loaders/: config.rs  mod.rs  yaml.rs
