[package]
name = "sentinel-wallpaper"
version = "0.1.0"
edition = "2021"
authors = ["Ico2"]
description = "Sentinel Wallpaper Addon"
license = "UNLICENSED"
publish = false

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
chrono = "0.4.43"
