[package]
name = "sentinel-wallpaper"
version = "0.3.0"
edition = "2021"
authors = ["Ico2"]
description = "Sentinel Wallpaper Addon — CanvasX GPU-rendered wallpapers"
license = "UNLICENSED"
publish = false

[dependencies]
# --- CanvasX Runtime (GPU renderer, scene graph, IPC bridge) ---
canvasx-runtime = { path = "../../sentine-backend/CanvasX" }
wgpu = "28"
pollster = "0.4"

# --- Windows APIs ---
windows = { version = "0.62", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Xps",
    "Win32_Security",
] }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
image = "0.25"

[build-dependencies]
winresource = "0.1"
